update LogFilter (change 'filter' method) [#252489 #477983]